# Zweihander

csharp/: Zweihander.sln
csharp/TestBench/: Program.cs  TestBench.csproj
csharp/ZweihanderWrapper/: Zweihander.cs  ZweihanderWrapper.csproj
rust/testbench/: Cargo.toml
rust/testbench/src/: main.rs
rust/zweihander/: Cargo.toml
rust/zweihander/src/: cbindings.rs  example.rs  lib.rs
