[package]
name = "zweihander"
version = "0.1.0"
authors = ["Hunter Barclay <hunter.barclay18@gmail.com>"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rapier3d = { version = "*", features = [ "simd-stable" ] }
